fixat så gaps och styling

--- a/src/css/paket.css
+++ b/src/css/paket.css
@@ -5,6 +5,7 @@
     justify-content: center;
     height: auto;
     width: 100%; /* eller en annan höjd beroende på ditt layoutbehov */
+    
 }
 
 
@@ -13,6 +14,10 @@
 }
 
 .paket-text{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between; /* Ensures that the button is pushed to the bottom */
+    height: 100%;
     margin: 1rem 5rem 1rem 5rem;
     padding: 1rem;
     box-shadow: 0px 4px 8px 0px rgba(35, 124, 145, 0.5);
@@ -168,6 +173,8 @@
        align-content: center;
        align-items: center;
        margin: 1rem;
+       height: auto;
+       width: 100%;
 /* eller en annan höjd beroende på ditt layoutbehov */
     }
  
@@ -177,7 +184,7 @@
         margin: 1rem 1rem 1rem 1rem;
         padding: 1rem;
         width: 230px;
-        height: 500px;
+        height: 600px;
         box-shadow: 0px 4px 8px 0px rgba(35, 124, 145, 0.5);
     }
     
