--- a/src/css/tjanster.css
+++ b/src/css/tjanster.css
@@ -1,7 +1,7 @@
 .tjanster{
     background-color: var(--primary-color);
     color: var(--third-color);
-    padding: 1rem;
+    padding: 2rem;
 }
 
 .imageTwo{
@@ -12,27 +12,21 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 1rem;
+    gap: 3rem;
 }
 
 .juridiskText-main h1{
-    font-size:2rem;
+    font-size: 2rem;
     padding-bottom: 1rem;
 
 }
 .juridiskText-main p{
     font-size: 1rem;
 }
-.tappning-text{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
+
 .tappning-text h1{
-    font-size:2rem;
+    font-size: 2rem;
     padding-bottom: 1rem;
-    padding-top: 1rem;
 
 }
 .tappning-text{
@@ -89,11 +83,11 @@
             grid-template-columns: 1fr 1fr;
             align-items: center;
             justify-content: center;
-            padding: 2rem;
         } 
         .booking-button{
             display: flex;
             justify-content: center;
+            
         }  
         .juridiskText-main h1{
             font-size:3rem;
